--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "USBizFilings",
-    "slug": "USBizFilings",
+    "name": "Todos",
+    "slug": "Todos",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
